--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "vercel-deploy": "next build && next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
