--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-kakao-maps-sdk": "^1.1.8",
     "typescript": "4.9.4"
   },
   "devDependencies": {
