feat: ShareLink 추가, kako api key 환경병수 설정해서 사용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "types":["kakao.maps.d.ts"],
+    "types":["kakao.maps.d.ts", "kakao-js-sdk"],
     "jsxImportSource": "@emotion/react"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
