--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@next/font": "13.1.2",
+    "@types/kakao-js-sdk": "^1.39.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.2",
+    "@types/dotenv": "^8.2.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-no-relative-import-paths": "^1.5.2",
     "eslint-plugin-prettier": "^4.2.1",
